# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "serviceadddonotdisturbprofiles_fuzzer:ServiceAddDoNotDisturbProfilesFuzzTest",
    "serviceadddonotdisturbprofilesbyuser_fuzzer:ServiceAddDoNotDisturbProfilesByUserFuzzTest",
    "serviceallowusereminder_fuzzer:ServiceAllowUseReminderFuzzTest",
    "servicecancel_fuzzer:ServiceCancelFuzzTest",
    "servicecancelall_fuzzer:ServiceCancelAllFuzzTest",
    "servicecancelasbundlewithagent_fuzzer:ServiceCancelAsBundleWithAgentFuzzTest",
    "servicecancelcontinuoustasknotification_fuzzer:ServiceCancelContinuousTaskNotificationFuzzTest",
    "servicecanpopenablenotificationdialog_fuzzer:ServiceCanPopEnableNotificationDialogFuzzTest",
    "servicecanpublishasbundle_fuzzer:ServiceCanPublishAsBundleFuzzTest",
    "servicecleardelaynotification_fuzzer:ServiceClearDelayNotificationFuzzTest",
    "servicedelete_fuzzer:ServiceDeleteFuzzTest",
    "servicedeleteallbyuser_fuzzer:ServiceDeleteAllByUserFuzzTest",
    "servicedeletebybundle_fuzzer:ServiceDeleteByBundleFuzzTest",
    "servicedisablenotificationfeature_fuzzer:ServiceDisableNotificationFeatureFuzzTest",
    "servicedistributeoperation_fuzzer:ServiceDistributeOperationFuzzTest",
    "serviceenabledistributedbybundle_fuzzer:ServiceEnableDistributedByBundleFuzzTest",
    "servicegeofencefunctions_fuzzer:ServiceGeofenceFunctionsFuzzTest",
    "servicegetactivenotifications_fuzzer:ServiceGetActiveNotificationsFuzzTest",
    "servicegetalldistribuedenabledbundles_fuzzer:ServiceGetAllDistribuedEnabledBundlesFuzzTest",
    "servicegetallliveviewenabledbundles_fuzzer:ServiceGetAllLiveViewEnabledBundlesFuzzTest",
    "servicegetallnotificationenabledbundles_fuzzer:ServiceGetAllNotificationEnabledBundlesFuzzTest",
    "servicegetallnotificationsbyslottype_fuzzer:ServiceGetAllNotificationsBySlotTypeFuzzTest",
    "servicegetallnotificationsbyslottypebyuser_fuzzer:ServiceGetAllNotificationsBySlotTypeByUserFuzzTest",
    "servicegetallsubscriptionbundles_fuzzer:ServiceGetAllSubscriptionBundlesFuzzTest",
    "servicegetbundleimportance_fuzzer:ServiceGetBundleImportanceFuzzTest",
    "servicegetdeviceremindtype_fuzzer:ServiceGetDeviceRemindTypeFuzzTest",
    "servicegetdonotdisturbprofile_fuzzer:ServiceGetDoNotDisturbProfileFuzzTest",
    "servicegetdonotdisturbprofilebyuser_fuzzer:ServiceGetDoNotDisturbProfileByUserFuzzTest",
    "servicegetenabledforbundleslot_fuzzer:ServiceGetEnabledForBundleSlotFuzzTest",
    "servicegetenabledforbundleslotself_fuzzer:ServiceGetEnabledForBundleSlotSelfFuzzTest",
    "servicegetnotificationrequestbyhashcode_fuzzer:ServiceGetNotificationRequestByHashCodeFuzzTest",
    "servicegetnotificationswitch_fuzzer:ServiceGetNotificationSwitchFuzzTest",
    "servicegetringtoneinfobybundle_fuzzer:ServiceGetRingtoneInfoByBundleFuzzTest",
    "servicegetshowbadgeenabledforbundle_fuzzer:ServiceGetShowBadgeEnabledForBundleFuzzTest",
    "servicegetslotbybundle_fuzzer:ServiceGetSlotByBundleFuzzTest",
    "servicegetspecialactivenotifications_fuzzer:ServiceGetSpecialActiveNotificationsFuzzTest",
    "servicegetstatisticsbybundle_fuzzer:ServiceGetStatisticsByBundleFuzzTest",
    "servicegetsubscribeInfo_fuzzer:ServiceGetSubscribeInfoFuzzTest",
    "servicegetsyncnotificationenabledwithoutapp_fuzzer:ServiceGetSyncNotificationEnabledWithoutAppFuzzTest",
    "servicegetusergrantedenabledbundles_fuzzer:ServiceGetUserGrantedEnabledBundlesFuzzTest",
    "servicegetusergrantedenabledbundlesforself_fuzzer:ServiceGetUserGrantedEnabledBundlesForSelfFuzzTest",
    "servicegetusergrantedstate_fuzzer:ServiceGetUserGrantedStateFuzzTest",
    "serviceisdistributedenablebybundle_fuzzer:ServiceIsDistributedEnableByBundleFuzzTest",
    "serviceisdistributedenabledbybundle_fuzzer:ServiceIsDistributedEnabledByBundleFuzzTest",
    "serviceisgeofenceenabled_fuzzer:ServiceIsgeofenceenabledFuzzTest",
    "serviceisneedsilentindonotdisturbmode_fuzzer:ServiceIsNeedSilentInDoNotDisturbModeFuzzTest",
    "serviceisneedsilentindonotdisturbmodebyuser_fuzzer:ServiceIsNeedSilentInDoNotDisturbModeByUserFuzzTest",
    "serviceissmartreminderenabled_fuzzer:ServiceIsSmartReminderEnabledFuzzTest",
    "serviceissupporttemplate_fuzzer:ServiceIsSupportTemplateFuzzTest",
    "servicenotificationextensionsubscribe_fuzzer:ServiceNotificationExtensionSubscribeFuzzTest",
    "servicenotificationextensionunsubscribe_fuzzer:ServiceNotificationExtensionUnsubscribeFuzzTest",
    "servicepublish_fuzzer:ServicePublishFuzzTest",
    "servicepublishasbundle_fuzzer:ServicePublishAsBundleFuzzTest",
    "servicepublishasbundlewithmaxcapacity_fuzzer:ServicePublishAsBundleWithMaxCapacityFuzzTest",
    "servicepublishdelayednotification_fuzzer:ServicePublishDelayedNotificationFuzzTest",
    "serviceregisterpushcallback_fuzzer:ServiceRegisterPushCallbackFuzzTest",
    "serviceremovedonotdisturbprofiles_fuzzer:ServiceRemoveDoNotDisturbProfilesFuzzTest",
    "serviceremovedonotdisturbprofilesbyuser_fuzzer:ServiceRemoveDoNotDisturbProfilesByUserFuzzTest",
    "serviceremovegroupbybundle_fuzzer:ServiceRemoveGroupByBundleFuzzTest",
    "serviceremovenotification_fuzzer:ServiceRemoveNotificationFuzzTest",
    "serviceremovenotifications_fuzzer:ServiceRemoveNotificationsFuzzTest",
    "servicereplydistributeoperation_fuzzer:ServiceReplyDistributeOperationFuzzTest",
    "servicesetbadgenumber_fuzzer:ServiceSetBadgeNumberFuzzTest",
    "servicesetbadgenumberfordhbybundle_fuzzer:ServiceSetBadgeNumberForDhByBundleFuzzTest",
    "servicesetdistributedenabledbybundle_fuzzer:ServiceSetDistributedEnabledByBundleFuzzTest",
    "servicesetdistributedenabledbyslot_fuzzer:ServiceSetDistributedEnabledBySlotFuzzTest",
    "servicesetenabledforbundleslot_fuzzer:ServiceSetEnabledForBundleSlotFuzzTest",
    "servicesetgeofenceenabled_fuzzer:ServiceSetGeofenceEnabledFuzzTest",
    "servicesethashcoderule_fuzzer:ServiceSetHashCodeRuleFuzzTest",
    "servicesethashcoderulebyuser_fuzzer:ServiceSetHashCodeRuleByUserFuzzTest",
    "servicesetnotificationsenabledbyuser_fuzzer:ServiceSetNotificationsEnabledByUserFuzzTest",
    "servicesetnotificationsenabledforallbundles_fuzzer:ServiceSetNotificationsEnabledForAllBundlesFuzzTest",
    "servicesetnotificationsenabledforspecialbundle_fuzzer:ServiceSetNotificationsEnabledForSpecialBundleFuzzTest",
    "servicesetringtoneinfobybundle_fuzzer:ServiceSetRingtoneInfoByBundleFuzzTest",
    "servicesetshowbadgeenabledforbundle_fuzzer:ServiceSetShowBadgeEnabledForBundleFuzzTest",
    "servicesetslotflagsasbundle_fuzzer:ServiceSetSlotFlagsAsBundleFuzzTest",
    "servicesetsmartreminderenabled_fuzzer:ServiceSetSmartReminderEnabledFuzzTest",
    "servicesetsyncnotificationenabledwithoutapp_fuzzer:ServiceSetSyncNotificationEnabledWithoutAppFuzzTest",
    "servicesettargetdevicestatus_fuzzer:ServiceSetTargetDeviceStatusFuzzTest",
    "servicesetusergrantedbundlestate_fuzzer:ServiceSetUserGrantedBundleStateFuzzTest",
    "servicesetusergrantedstate_fuzzer:ServiceSetUserGrantedStateFuzzTest",
    "servicesubscribe_fuzzer:ServiceSubscribeFuzzTest",
    "servicesubscribelocalliveview_fuzzer:ServiceSubscribeLocalLiveViewFuzzTest",
    "servicesubscribenotification_fuzzer:ServiceSubscribeNotificationFuzzTest",
    "serviceunsubscribe_fuzzer:ServiceUnsubscribeFuzzTest",
    "serviceupdateslots_fuzzer:ServiceUpdateSlotsFuzzTest",
  ]
  if (build_variant == "root") {
    deps += [ "serviceshelldump_fuzzer:ServiceShellDumpFuzzTest" ]
  }
}
