# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")

config("public_config") {
  include_dirs = [ "${component_path}/test/fuzztest/fuzz_common_base" ]
}

static_library("fuzz_common_base") {
  public_configs = [ ":public_config" ]
  sources = [ "fuzz_common_base.cpp" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "selinux_adapter:librestorecon",
  ]
}

config("public_mock_config") {
  include_dirs = [
    "mock"
  ]
}

static_library("fuzz_mock_object") {
  public_configs = [ ":public_mock_config" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [ "${frameworks_module_ans_path}:ans_innerkits" ]
}
