# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/notification/distributed_notification_service/notification.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("NotificationServiceFuzzTest") {
  module_out_path = service_fuzz_test_path
  fuzz_config_file = "${component_path}/test/fuzztest/notificationservice_fuzzer"

  include_dirs = [ 
    "${component_path}/test/fuzztest/fuzz_common_base",
    "/${services_path}/ans/include",
    "/${services_path}/reminder/include",
    "/${services_path}/ans/include/utils",
    "${services_path}/infrastructure/external_adapter/ffrt/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "notificationservice_fuzzer.cpp" ]

  deps = [
    "${component_path}/test/fuzztest/fuzz_common_base:fuzz_common_base",
    "${frameworks_module_ans_path}:ans_innerkits",
    "${services_path}/ans:libans",
    "${frameworks_module_reminder_path}:reminder_innerkits",
    "${services_path}/reminder:libreminder",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "relational_store:native_rdb",
    "ffrt:libffrt",
    "kv_store:distributeddata_inner",
    "bluetooth:btframework",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_permission",
    "time_service:time_client",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":NotificationServiceFuzzTest" ]
}
###############################################################################
